--- a/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/stores.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/stores.yml
@@ -13,6 +13,20 @@ admin_stores_search:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\CommonController::searchGridAction
     _legacy_controller: AdminStores
-    _legacy_link: AdminStores
+    # @todo; uncomment legacy link when page is fully migrated and ready to be displayed by default
+    # _legacy_link: AdminStores
     gridDefinitionFactoryServiceId: PrestaShop\PrestaShop\Core\Grid\Definition\Factory\StoreGridDefinitionFactory
     redirectRoute: admin_stores_index
+
+admin_stores_toggle_status:
+  path: /{storeId}/toggle-status
+  methods: [ POST ]
+  defaults:
+    _controller: 'PrestaShopBundle\Controller\Admin\Configure\ShopParameters\StoreController::toggleStatusAction'
+    _legacy_controller: AdminSuppliers
+    # @todo; uncomment legacy link when page is fully migrated and ready to be displayed by default
+    # _legacy_link: AdminSuppliers:statusstore
+    _legacy_parameters:
+      id_store: storeId
+  requirements:
+    storeId: \d+
