--- a/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/stores.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/stores.yml
@@ -23,10 +23,50 @@ admin_stores_toggle_status:
   methods: [ POST ]
   defaults:
     _controller: 'PrestaShopBundle\Controller\Admin\Configure\ShopParameters\StoreController::toggleStatusAction'
-    _legacy_controller: AdminSuppliers
+    _legacy_controller: AdminStores
     # @todo; uncomment legacy link when page is fully migrated and ready to be displayed by default
-    # _legacy_link: AdminSuppliers:statusstore
+    # _legacy_link: AdminStores:statusstore
     _legacy_parameters:
       id_store: storeId
   requirements:
     storeId: \d+
+
+admin_stores_delete:
+  path: /{storeId}/delete
+  methods: [ DELETE ]
+  defaults:
+    _controller: 'PrestaShopBundle\Controller\Admin\Configure\ShopParameters\StoreController::deleteAction'
+    _legacy_controller: AdminStores
+    # @todo; uncomment legacy link when page is fully migrated and ready to be displayed by default
+    # _legacy_link: AdminStores:deletestore
+    _legacy_parameters:
+      id_store: storeId
+  requirements:
+    storeId: \d+
+
+admin_stores_bulk_delete:
+  path: /bulk-delete
+  methods: [ POST ]
+  defaults:
+    _controller: 'PrestaShopBundle\Controller\Admin\Configure\ShopParameters\StoreController::bulkDeleteAction'
+    _legacy_controller: AdminStores
+    # @todo; uncomment legacy link when page is fully migrated and ready to be displayed by default
+    # _legacy_link: AdminStores:submitBulkdeletestore
+
+admin_stores_bulk_enable:
+  path: /bulk-enable
+  methods: [ POST ]
+  defaults:
+    _controller: 'PrestaShopBundle\Controller\Admin\Configure\ShopParameters\StoreController::bulkEnableAction'
+    _legacy_controller: AdminStores
+    # @todo; uncomment legacy link when page is fully migrated and ready to be displayed by default
+    # _legacy_link: AdminStores:submitBulkenableSelectionstore
+
+admin_stores_bulk_disable:
+  path: /bulk-disable
+  methods: [ POST ]
+  defaults:
+    _controller: 'PrestaShopBundle\Controller\Admin\Configure\ShopParameters\StoreController::bulkDisableAction'
+    _legacy_controller: AdminStores
+    # @todo; uncomment legacy link when page is fully migrated and ready to be displayed by default
+    # _legacy_link: AdminStores:submitBulkdisableSelectionstore
