--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
   workflow_dispatch:
   push:
-    branches: [main, sklepbaletowy/8.0.1]
+    branches: [main]
   release:
     types: [published]
   
