fixed yml and controller

--- a/src/PrestaShopBundle/Resources/config/services/adapter/contact.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/contact.yml
@@ -2,7 +2,7 @@ services:
   _defaults:
     public: true
 
-  PrestaShop\PrestaShop\Adapter\Support\ContactRepository:
+  PrestaShop\PrestaShop\Adapter\Support\ContactRepository: ~
 
   prestashop.adapter.contact.deleter:
     class: 'PrestaShop\PrestaShop\Adapter\Support\ContactDeleter'
