--- a/src/PrestaShopBundle/Resources/config/services/adapter/customer.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/customer.yml
@@ -119,10 +119,10 @@ services:
 
   PrestaShop\PrestaShop\Adapter\Customer\Repository\CustomerRepository: ~
 
-  PrestaShop\PrestaShop\Adapter\Customer\CustomerMessage:
+  PrestaShop\PrestaShop\Adapter\Customer\CustomerMessage: ~
 
   PrestaShop\PrestaShop\Core\Customer\CustomerMessageInterface: '@PrestaShop\PrestaShop\Adapter\Customer\CustomerMessage'
 
-  PrestaShop\PrestaShop\Adapter\Customer\CustomerThread:
+  PrestaShop\PrestaShop\Adapter\Customer\CustomerThread: ~
 
   PrestaShop\PrestaShop\Core\Customer\CustomerThreadInterface: '@PrestaShop\PrestaShop\Adapter\Customer\CustomerThread'
