--- a/src/PrestaShopBundle/Resources/config/services/core/domain/customer_message.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/domain/customer_message.yml
@@ -3,4 +3,4 @@ services:
     autowire: true
     public: true
 
-  PrestaShop\PrestaShop\Core\Domain\CustomerMessage\Repository\CustomerMessageRepository:
+  PrestaShop\PrestaShop\Core\Domain\CustomerMessage\Repository\CustomerMessageRepository: ~
