--- a/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/sell/catalog/features.yml
@@ -1,11 +1,11 @@
+# @todo: legacy links can be uncommented when page is fully migrated.
 admin_features_index:
   path: /
   methods: [ GET, POST ]
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\FeatureController::indexAction
     _legacy_controller: AdminFeatures
-    _legacy_link: AdminFeatures
-    _legacy_feature_flag: feature
+    # _legacy_link: AdminFeatures
 
 admin_features_add:
   path: /new
@@ -13,8 +13,7 @@ admin_features_add:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\FeatureController::createAction
     _legacy_controller: AdminFeatures
-    _legacy_link: AdminFeatures:addfeature
-    _legacy_feature_flag: feature
+    # _legacy_link: AdminFeatures:addfeature
 
 admin_features_edit:
   path: /{featureId}/edit
@@ -22,7 +21,7 @@ admin_features_edit:
   defaults:
     _controller: PrestaShopBundle\Controller\Admin\Sell\Catalog\FeatureController::editAction
     _legacy_controller: AdminFeatures
-    _legacy_link: AdminFeatures:updatefeature
+    # _legacy_link: AdminFeatures:updatefeature
     _legacy_parameters:
       id_feature: featureId
   requirements:
