--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -765,6 +765,14 @@ services:
 
   PrestaShopBundle\Form\Admin\AdvancedParameters\AuthorizationServer\ApplicationType:
   PrestaShopBundle\Form\Admin\Improve\International\Tax\TaxRulesGroupType:
+  PrestaShopBundle\Form\Admin\Sell\CartRule\CartRuleType:
+  PrestaShopBundle\Form\Admin\Sell\CartRule\ActionsType:
+  PrestaShopBundle\Form\Admin\Sell\CartRule\ConditionsType:
+    arguments:
+      $currencyByIdChoiceProvider: '@prestashop.core.form.choice_provider.currency_by_id'
+
+  PrestaShopBundle\Form\Admin\Sell\CartRule\InformationType:
+  PrestaShopBundle\Form\Admin\Sell\CartRule\RestrictionsType:
 
   # Deprecated
   form.type.sell.product.event_listener.categories_listener:
