--- a/composer.json
+++ b/composer.json
@@ -142,7 +142,8 @@
         "symfony/symfony": "4.4.*",
         "tecnickcom/tcpdf": "^6.2.12",
         "tijsverkoyen/css-to-inline-styles": "^2.2",
-        "twig/twig": "^3.0"
+        "twig/twig": "^3.0",
+        "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
         "behat/behat": "^3.5",
