allow changing apache server port

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,8 @@ PS_HANDLE_DYNAMIC_DOMAIN=0
 PS_DEV_MODE=1
 PS_ENABLE_SSL=0
 
-PS_DOMAIN=localhost:8001 # must use port 8001
+PS_DOMAIN=localhost:8080
+PS_PORT=8080 # must match the port used in PS_DOMAIN
 PS_LANGUAGE=en
 PS_COUNTRY=FR
 
