Add named volumes to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,11 @@ version: '2.1'
 
 volumes:
   db-data:
+    name: db-data
   vendor:
+    name: vendor
   var:
+    name: var
 
 services:
   mysql:
