Add Sponsor company into issue template

--- a/.github/ISSUE_TEMPLATE/1_bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/1_bug_report.yml
@@ -64,3 +64,9 @@ body:
       placeholder: "e.g., ps_facetedsearch v7.0"
     validations:
       required: false
+  - type: input
+    id: sponsor-company
+    attributes:
+      label: Your company or customer's name goes here (if applicable).
+    validations:
+      required: false
