--- a/app/config/security_test.yml
+++ b/app/config/security_test.yml
@@ -9,16 +9,28 @@ security:
     admin:
       id: prestashop.security.admin.provider
 
-    # Empty provider until a real provider is developed
+    # Temporary provider & encoder to be able to use the new BO API in test mode
     oauth2:
       memory:
         users:
+          my_client_id: { password: 'prestashop' }
+
+  encoders:
+    Symfony\Component\Security\Core\User\User: plaintext
 
   firewalls:
     # disables authentication for assets and the profiler, adapt it according to your needs
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
+
+    api:
+      pattern: '^%api_base_path%'
+      stateless: true
+      provider: 'oauth2'
+      guard:
+        authenticator:
+          - PrestaShop\PrestaShop\Core\Security\TokenAuthenticator
 
     main:
       anonymous: ~
