--- a/src/PrestaShopBundle/Resources/config/services/adapter/category.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/category.yml
@@ -61,6 +61,7 @@ services:
   prestashop.adapter.category.command_handler.add_category_handler:
     class: PrestaShop\PrestaShop\Adapter\Category\CommandHandler\AddCategoryHandler
     public: true
+    autowire: true
     tags:
       - { name: tactician.handler, command: PrestaShop\PrestaShop\Core\Domain\Category\Command\AddCategoryCommand }
 
@@ -69,6 +70,7 @@ services:
     arguments:
       - '@prestashop.adapter.legacy.configuration'
     public: true
+    autowire: true
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Category\Command\AddRootCategoryCommand
@@ -76,6 +78,7 @@ services:
   prestashop.adapter.category.command_handler.edit_root_category_handler:
     class: PrestaShop\PrestaShop\Adapter\Category\CommandHandler\EditRootCategoryHandler
     public: true
+    autowire: true
     tags:
       - name: tactician.handler
         command: PrestaShop\PrestaShop\Core\Domain\Category\Command\EditRootCategoryCommand
@@ -83,6 +86,7 @@ services:
   prestashop.adapter.category.command_handler.edit_category_handler:
     class: PrestaShop\PrestaShop\Adapter\Category\CommandHandler\EditCategoryHandler
     public: true
+    autowire: true
     tags:
       - { name: tactician.handler, command: PrestaShop\PrestaShop\Core\Domain\Category\Command\EditCategoryCommand }
 
