--- a/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/form/form_type.yml
@@ -776,6 +776,8 @@ services:
     arguments:
       $urlGenerator: '@prestashop.core.admin.url_generator'
 
+  PrestaShopBundle\Form\Admin\Sell\CartRule\EventListener\DiscountListener:
+
   # Deprecated
   form.type.sell.product.event_listener.categories_listener:
     alias: 'PrestaShopBundle\Form\Admin\Sell\Product\EventListener\CategoriesListener'
