Titles : Fixed feedbacks : behat tests (multilang), exit the uploader, value object the gender

--- a/src/PrestaShopBundle/Resources/config/services/adapter/image.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/image.yml
@@ -53,3 +53,5 @@ services:
     class: 'PrestaShop\PrestaShop\Adapter\Image\ImagePathFactory'
     arguments:
       - '@=service("prestashop.adapter.shop.url.category_image_folder_provider").getUrl()'
+
+  PrestaShop\PrestaShop\Adapter\Image\Uploader\TitleImageUploader: ~
