--- a/.github/workflows/cron_nightly_build.yml
+++ b/.github/workflows/cron_nightly_build.yml
@@ -73,11 +73,14 @@ jobs:
         run: today=`date +%Y-%m-%d-`; for i in *; do mv $i $today$GH_BRANCH-$i; done
         working-directory: ${{ env.RELEASE_DIR }}
 
-      - uses: google-github-actions/setup-gcloud@v0
-        name: Setup Cloud Sdk
+      - name: Auth Cloud Sdk
+        uses: google-github-actions/auth@v0
         with:
-          service_account_key: ${{ env.GC_SERVICE_KEY }}
+          credentials_json: ${{ env.GC_SERVICE_KEY }}
           project_id: ${{ env.GC_PROJECT_ID }}
+
+      - name: Setup Cloud Sdk
+        uses: google-github-actions/setup-gcloud@v0
 
       - name: Upload to Google Cloud Storage (GCS)
         run: gsutil cp -r "${{ env.RELEASE_DIR }}/**" gs://prestashop-core-nightly
