--- a/.github/workflows/cron_nightly_gcp.yml
+++ b/.github/workflows/cron_nightly_gcp.yml
@@ -38,10 +38,14 @@ jobs:
       - name: Initialize GCloud Service Key
         run: echo $GC_SERVICE_KEY > $HOME/gcloud-service-key.json
 
-      - uses: google-github-actions/setup-gcloud@v0
+      - name: Auth Cloud Sdk
+        uses: google-github-actions/auth@v0
         with:
-          service_account_key: ${{ env.GC_SERVICE_KEY }}
+          credentials_json: ${{ env.GC_SERVICE_KEY }}
           project_id: ${{ env.GC_PROJECT_ID }}
+
+      - name: Setup Cloud Sdk
+        uses: google-github-actions/setup-gcloud@v0
 
       - name: Stop the instance if started
         run: gcloud compute instances stop --zone $GC_ZONE "${GC_INSTANCE_NAME}-${INSTANCE_TYPE}"
