--- a/.github/workflows/cron_nightly_tests_reusable.yml
+++ b/.github/workflows/cron_nightly_tests_reusable.yml
@@ -198,11 +198,14 @@ jobs:
           REPORT_NAME="$(date +%Y-%m-%d)-${{ env.GH_BRANCH }}"
           npx mochawesome-merge "${{ env.REPORTS_DIR_PATH }}/*.json" -o "${{ env.COMBINED_REPORT_DIR_PATH }}/${REPORT_NAME}.json"
 
-      - uses: google-github-actions/setup-gcloud@v0
-        name: Setup Cloud Sdk
+      - name: Auth Cloud Sdk
+        uses: google-github-actions/auth@v0
         with:
-          service_account_key: ${{ secrets.GC_SERVICE_KEY }}
-          project_id: ${{ secrets.GC_PROJECT_ID }}
+          credentials_json: ${{ env.GC_SERVICE_KEY }}
+          project_id: ${{ env.GC_PROJECT_ID }}
+
+      - name: Setup Cloud Sdk
+        uses: google-github-actions/setup-gcloud@v0
 
       - name: Upload to Google Cloud Storage (GCS)
         run: gsutil cp -r "${{ env.COMBINED_REPORT_DIR }}/**" gs://prestashop-core-nightly/reports
