--- a/.github/workflows/cron_nightly_tests_reusable.yml
+++ b/.github/workflows/cron_nightly_tests_reusable.yml
@@ -201,8 +201,8 @@ jobs:
       - name: Auth Cloud Sdk
         uses: google-github-actions/auth@v0
         with:
-          credentials_json: ${{ env.GC_SERVICE_KEY }}
-          project_id: ${{ env.GC_PROJECT_ID }}
+          credentials_json: ${{ secrets.GC_SERVICE_KEY }}
+          project_id: ${{ secrets.GC_PROJECT_ID }}
 
       - name: Setup Cloud Sdk
         uses: google-github-actions/setup-gcloud@v0
