--- a/src/PrestaShopBundle/Resources/config/services/bundle/services.yml
+++ b/src/PrestaShopBundle/Resources/config/services/bundle/services.yml
@@ -52,6 +52,8 @@ services:
     properties:
       container: "@service_container"
 
+  Symfony\Contracts\Translation\TranslatorInterface: '@translator'
+
   # Interfaced services to decorate
   prestashop.core.data_provider.stock_interface:
     class: PrestaShopBundle\Service\DataProvider\StockInterface
