--- a/tests/Integration/Behaviour/behat.yml
+++ b/tests/Integration/Behaviour/behat.yml
@@ -542,6 +542,7 @@ default:
             - Tests\Integration\Behaviour\Features\Context\CommonFeatureContext
             - Tests\Integration\Behaviour\Features\Context\Domain\CustomerServiceFeatureContext
             - Tests\Integration\Behaviour\Features\Context\Domain\ContactFeatureContext
+            - Tests\Integration\Behaviour\Features\Context\LanguageFeatureContext
         authorization_server:
           paths:
             - "%paths.base%/Features/Scenario/AuthorizationServer"
