Add Shop creator script
Signed-off-by: Fabien Papet <fabien.papet@gmail.com>

--- a/phpstan-disallowed-calls.neon
+++ b/phpstan-disallowed-calls.neon
@@ -276,6 +276,7 @@ parameters:
             allowIn:
                 - src/Adapter/*
                 - src/PrestaShopBundle/Install/*
+                - src/PrestaShopBundle/Command/ShopCreatorCommand.php
         -
             class: 'Symfony\Component\Translation\TranslatorInterface'
             message: 'use Symfony\Contracts\Translation\TranslatorInterface instead'
