--- a/src/PrestaShopBundle/Resources/config/services_dev/bundle/command.yml
+++ b/src/PrestaShopBundle/Resources/config/services_dev/bundle/command.yml
@@ -68,3 +68,7 @@ services:
   PrestaShopBundle\Command\UpdateLicensesCommand:
     tags:
       - 'console.command'
+
+  PrestaShopBundle\Command\ShopCreatorCommand:
+    autowire: true
+    autoconfigure: true
