--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,10 +27,10 @@ jobs:
         run: npm install -g npm@7
 
       - name: BackOffice Theme `new-theme`
-        run: cd ./admin-dev/themes/new-theme && npm install && npm run scss-lint
+        run: cd ./admin-dev/themes/new-theme && npm ci && npm run scss-lint
 
       - name: BackOffice Theme `default`
-        run: cd ./admin-dev/themes/default && npm install && npm run scss-lint
+        run: cd ./admin-dev/themes/default && npm ci && npm run scss-lint
 
   eslint:
     name: ESLint
@@ -53,10 +53,10 @@ jobs:
             && (cd themes && npm ci)
 
       - name: BackOffice Theme `default`
-        run: cd ./admin-dev/themes/default && npm install && npm run lint
+        run: cd ./admin-dev/themes/default && npm ci && npm run lint
 
       - name: BackOffice Theme `new-theme`
-        run: cd ./admin-dev/themes/new-theme && npm install && npm run lint
+        run: cd ./admin-dev/themes/new-theme && npm ci && npm run lint
 
   yamllint_sf:
     name: YAML Lint (Symfony Check)
