--- a/.github/workflows/sanity.yml
+++ b/.github/workflows/sanity.yml
@@ -41,7 +41,7 @@ jobs:
         working-directory: ./tests/UI
 
       - name: Run tests
-        run: npm install && npm run test:sanity:fast-fail
+        run: npm ci && npm run test:sanity:fast-fail
         working-directory: ./tests/UI
 
       - uses: actions/upload-artifact@v3
