--- a/.github/workflows/ui_tests_code_checks.yml
+++ b/.github/workflows/ui_tests_code_checks.yml
@@ -44,7 +44,7 @@ jobs:
         run: npm install -g npm@${{ env.NPM_VERSION }}
 
       - name: Install dependencies in UI tests directory
-        run: npm install
+        run: npm ci
 
       - name: Check eslint errors
         run: npm run lint
@@ -72,7 +72,7 @@ jobs:
         run: npm install -g npm@${{ env.NPM_VERSION }}
 
       - name: Install dependencies in UI tests directory
-        run: npm install
+        run: npm ci
 
       - name: Generate mocha reports with failed steps
         run: GENERATE_FAILED_STEPS=true npm run test:all
