create initial search config page

--- a/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/_shop_parameters.yml
+++ b/src/PrestaShopBundle/Resources/config/routing/admin/configure/shop_parameters/_shop_parameters.yml
@@ -45,3 +45,7 @@ _search_engines:
 _title:
   resource: "title.yml"
   prefix: /title/
+
+_search_preferences:
+  resource: "search_preferences.yml"
+  prefix: /search/
